
message UserInfo
{
	optional string name  = 1;	//玩家名字
	optional string passwd  = 2;	//玩家密码
	optional string id = 3;		//玩家id
}

message UserRoleInfo{
	optional int32 id = 1;		//角色id 
	optional string name   = 2;	//角色昵称	
	optional int32 server = 3;	//角色所在服务器
	optional int64 ctime = 4;	//角色创建时间
	optional string uid = 5;		//玩家id
	optional int32 typeId = 6;	//角色类型
}

message LogicServerInfo
{
	optional int32 id = 1;	//区服id
	optional string name = 2;//区服名字
	optional string state = 3;//火爆等
	optional int64 start = 4;//启动时间
	optional int64 end = 5;//关闭时间
}